@@ -2,14 +2,13 @@ package com.example.demo.chapter05;
 
 import lombok.extern.slf4j.Slf4j;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Slf4j
 public class FilteringNumber {
     public static void main(String[] args) {
-        var numbers = Arrays.asList(1, 2, 1, 3, 3, 2, 4);
+        var numbers = List.of(1, 2, 1, 3, 3, 2, 4);
 
         // filtering unique even numbers
         log.info("Even numbers: {}", uniqueEvenNumbers(numbers));
