@@ -4,7 +4,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -15,7 +14,7 @@ class FilteringNumberTest {
 
     @BeforeEach
     void setUp() {
-        numbers = Arrays.asList(1, 2, 1, 3, 3, 2, 4);
+        numbers = List.of(1, 2, 1, 3, 3, 2, 4);
     }
 
     @Test
